[package]
name = "pcoa"
version = "0.1.0"
authors = ["Ilya Builuk <ilya.builuk@gmail.com>"]
license = "Apache-2.0"
keywords = ["vrp", "pcoa"]
categories = ["algorithms", "science"]
readme = "README.md"
homepage = "https://github.com/reinterpretcat/pcoa"
repository = "https://github.com/reinterpretcat/pcoa"
edition = "2021"

[dependencies]
nalgebra = "0.32.3"
simba = "0.8.1"