[package]
name = "pcoa"
description = "This crate provides a way to apply Principal Coordinate Analysis on a distance (dissimilarity) matrix."
version = "0.1.1"
authors = ["Ilya Builuk <ilya.builuk@gmail.com>"]
license = "Apache-2.0"
keywords = ["vrp", "pcoa"]
categories = ["algorithms", "science"]
readme = "README.md"
homepage = "https://github.com/reinterpretcat/pcoa"
repository = "https://github.com/reinterpretcat/pcoa"
edition = "2021"

[dependencies]
nalgebra = "0.32.3"
simba = "0.8.1"